// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Application file endpoints should fail completeApplicationFileUploads when another workspace owns the application registration 1`] = `
{
  "extensions": {
    "code": "FORBIDDEN",
    "subCode": "FORBIDDEN",
    "userFriendlyMessage": "You do not have permission to perform this action.",
  },
  "message": ""<applicationUniversalIdentifier>" is registered to another workspace. Change the universalIdentifier in your manifest, or transfer the registration from the owning workspace.",
  "name": "ForbiddenError",
}
`;

exports[`Application file endpoints should fail completeApplicationFileUploads when no workspace has claimed the application registration 1`] = `
{
  "extensions": {
    "code": "FORBIDDEN",
    "subCode": "FORBIDDEN",
    "userFriendlyMessage": "You do not have permission to perform this action.",
  },
  "message": ""<applicationUniversalIdentifier>" is registered on this instance but claimed by no workspace. Claim its ownership before developing on it.",
  "name": "ForbiddenError",
}
`;

exports[`Application file endpoints should fail completeApplicationFileUploads when the application has no registration 1`] = `
{
  "extensions": {
    "code": "NOT_FOUND",
    "subCode": "APPLICATION_NOT_FOUND",
    "userFriendlyMessage": "Application not found.",
  },
  "message": "No registration found for "20202020-64aa-4b6f-b003-9c74b97cee20". Create one first with createApplicationRegistration.",
  "name": "NotFoundError",
}
`;

exports[`Application file endpoints should fail completeApplicationFileUploads when the application has no registration link and another workspace owns the registration 1`] = `
{
  "extensions": {
    "code": "FORBIDDEN",
    "subCode": "FORBIDDEN",
    "userFriendlyMessage": "You do not have permission to perform this action.",
  },
  "message": ""<applicationUniversalIdentifier>" is registered to another workspace. Change the universalIdentifier in your manifest, or transfer the registration from the owning workspace.",
  "name": "ForbiddenError",
}
`;

exports[`Application file endpoints should fail createApplicationFileUploads when another workspace owns the application registration 1`] = `
{
  "extensions": {
    "code": "FORBIDDEN",
    "subCode": "FORBIDDEN",
    "userFriendlyMessage": "You do not have permission to perform this action.",
  },
  "message": ""<applicationUniversalIdentifier>" is registered to another workspace. Change the universalIdentifier in your manifest, or transfer the registration from the owning workspace.",
  "name": "ForbiddenError",
}
`;

exports[`Application file endpoints should fail createApplicationFileUploads when no workspace has claimed the application registration 1`] = `
{
  "extensions": {
    "code": "FORBIDDEN",
    "subCode": "FORBIDDEN",
    "userFriendlyMessage": "You do not have permission to perform this action.",
  },
  "message": ""<applicationUniversalIdentifier>" is registered on this instance but claimed by no workspace. Claim its ownership before developing on it.",
  "name": "ForbiddenError",
}
`;

exports[`Application file endpoints should fail createApplicationFileUploads when the application has no registration 1`] = `
{
  "extensions": {
    "code": "NOT_FOUND",
    "subCode": "APPLICATION_NOT_FOUND",
    "userFriendlyMessage": "Application not found.",
  },
  "message": "No registration found for "20202020-64aa-4b6f-b003-9c74b97cee20". Create one first with createApplicationRegistration.",
  "name": "NotFoundError",
}
`;

exports[`Application file endpoints should fail createApplicationFileUploads when the application has no registration link and another workspace owns the registration 1`] = `
{
  "extensions": {
    "code": "FORBIDDEN",
    "subCode": "FORBIDDEN",
    "userFriendlyMessage": "You do not have permission to perform this action.",
  },
  "message": ""<applicationUniversalIdentifier>" is registered to another workspace. Change the universalIdentifier in your manifest, or transfer the registration from the owning workspace.",
  "name": "ForbiddenError",
}
`;
